; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_claw.c_claw_irq_tasklet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_claw.c_claw_irq_tasklet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chbk = type { i32, i64 }
%struct.net_device = type { i64 }
%struct.claw_privbk = type { i32 }

@trace = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"IRQtask\00", align 1
@CLAW_BH_ACTIVE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"TskletXt\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @claw_irq_tasklet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @claw_irq_tasklet(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.chbk*, align 8
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca %struct.claw_privbk*, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = inttoptr i64 %6 to %struct.chbk*
  store %struct.chbk* %7, %struct.chbk** %3, align 8
  %8 = load %struct.chbk*, %struct.chbk** %3, align 8
  %9 = getelementptr inbounds %struct.chbk, %struct.chbk* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.net_device*
  store %struct.net_device* %11, %struct.net_device** %4, align 8
  %12 = load i32, i32* @trace, align 4
  %13 = call i32 @CLAW_DBF_TEXT(i32 4, i32 %12, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %14 = load %struct.net_device*, %struct.net_device** %4, align 8
  %15 = getelementptr inbounds %struct.net_device, %struct.net_device* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.claw_privbk*
  store %struct.claw_privbk* %17, %struct.claw_privbk** %5, align 8
  %18 = load %struct.net_device*, %struct.net_device** %4, align 8
  %19 = call i32 @unpack_read(%struct.net_device* %18)
  %20 = load i32, i32* @CLAW_BH_ACTIVE, align 4
  %21 = load %struct.chbk*, %struct.chbk** %3, align 8
  %22 = getelementptr inbounds %struct.chbk, %struct.chbk* %21, i32 0, i32 0
  %23 = bitcast i32* %22 to i8*
  %24 = call i32 @clear_bit(i32 %20, i8* %23)
  %25 = load i32, i32* @trace, align 4
  %26 = call i32 @CLAW_DBF_TEXT(i32 4, i32 %25, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @CLAW_DBF_TEXT(i32, i32, i8*) #1

declare dso_local i32 @unpack_read(%struct.net_device*) #1

declare dso_local i32 @clear_bit(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
